chore(lint): only run prettier

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "vitest": "^3.2.4"
   },
   "lint-staged": {
-    "*.{js,jsx}": "eslint --cache --fix",
-    "*.{js,jsx,css,md}": "prettier --write"
+    "*.{js,jsx,css,md}": "prettier --write --experimental-cli"
   }
 }
